cargo-features = ["edition2021"]

[package]
name = "huggingfacedownloader"
version = "1.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["stream", "json"] }
scraper = "0.18"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
indicatif = "0.18"
futures = "0.3"
uuid = { version = "1.7", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
lazy_static = "1.5.0"
sha1 = "0.10"
sha2 = "0.10"


